syntax="proto2";

package distributed.search;

option java_package = "model.proto";

option java_outer_classname = "SearchModel";

message Request {
    required string search_query = 1;
    repeated int64 document_ids = 2;
    required string search_method = 3;
}

message Response {
    repeated DocumentStats relevant_documents = 1;

    message DocumentStats {
        required int64 document_id = 1;
        optional double score = 2;
    }
}
